docs/getting-started/apps/base/kcp/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-tls-passthrough
  namespace: openmfp-system
spec:
  selector:
    istio: gateway # use istio default ingress gateway
  servers:
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - 'kcp.dev.local'
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kcp-front-proxy
  namespace: openmfp-system
spec:
  gateways:
  - openmfp-system/gateway-tls-passthrough
  hosts:
  - 'kcp.dev.local'
  tls:
  - match:
    - sniHosts:
      - 'kcp.dev.local'
    route:
    - destination:
        host: kcp-front-proxy.openmfp-system.svc.cluster.local
